# tatva-docs

./: .gitignore  404.html  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml
.github/workflows/: build_docs.yml
_hooks/: tag_notebook_colab.py
about/: index.html
api/tatva.compound/: index.html
api/tatva.element/: index.html
api/tatva.lifter/: index.html
api/tatva.mesh/: index.html
api/tatva.operator/: index.html
api/tatva.plotting/: index.html
api/tatva.sparse/: index.html
assets/plots/: cohesive_fracture_interactive.html  fracture_mesh_interactive.html
compound/: index.html
docs/: about.md  compound.ipynb  getting_started.md  index.md  installation.md  lifter.ipynb  operator.ipynb  sparse.ipynb
docs/_hooks/: tag_notebook_colab.py
docs/api/: tatva.compound.md  tatva.element.md  tatva.lifter.md  tatva.md  tatva.mesh.md  tatva.operator.md  tatva.plotting.md  tatva.sparse.md
docs/examples/: advection_diffusion_surface.ipynb  contact_3d.ipynb  fracture_quasistatic_3d.ipynb  homogenization_periodic.ipynb  linear_elasticity.ipynb  ncm_metamaterial.ipynb  neural_operator_method_3d.ipynb  nonlinear_hole_plate.ipynb  soft_hydrogel.ipynb  thermal_shock_fracture.ipynb
docs/external_solvers/: linear_elasticity_petsc4py.ipynb  linear_elasticity_petsc4py_mf.ipynb  linear_elasticity_scipy.ipynb
docs/stylesheets/: carousel.css  custom_css.css  extra.css
getting_started/: index.html
lifter/: index.html
operator/: index.html
search/: search_index.json
sparse/: index.html
stylesheets/: carousel.css  extra.css  style.css
(+13 files in other folders)
